--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@vercel/postgres": "^0.10.0",
+    "bcrypt": "^5.1.1",
     "microcms-js-sdk": "^3.1.2",
     "next": "14.2.9",
     "next-auth": "^4.24.7",
@@ -21,6 +22,7 @@
     "stripe": "^16.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
