--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ STRIPE_SECRET_KEY="sk_test_51PzAHB2M1J7YK37IjBqnb58AqqLsaxdqhPfjs4oN1iBWMAQiYMJD
 
 NEXT_PUBLIC_API_URL="http://localhost:3000/api"
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+
+NEXTAUTH_JWT_SECRET="lngtdrfNuu5j5h7lfnGDwuXTSoxpQ76apK4riJrFlr8="
